# headhunt-agent

./: .dockerignore  .env.example  .gitignore  AGENTS.md  Caddyfile  Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml  任务记忆文档.md  项目prompt.md  项目文件索引.json  项目文件索引.md
app/: __init__.py  main.py
app/api/: approvals.py  auth.py  council.py  discord.py  feishu.py  health.py  inspection.py  memory.py  router.py  tasks.py
app/artifacts/: __init__.py  repository.py  store.py
app/core/: config.py  readiness.py
migrations/: env.py
scripts/: docker-entrypoint.sh  lietou-oneclick.ps1  lietou-oneclick.sh
tests/: test_action_executor.py  test_action_gate.py  test_agent_harness.py  test_approvals_api.py  test_artifact_repository.py  test_bitable_sync_repository.py  test_config_check.py  test_discord_commands.py  test_discord_interactions.py  test_embedding_gateway.py  test_external_smoke.py  test_feishu_callbacks.py  test_feishu_dispatcher.py  test_feishu_gateways.py  test_feishu_outbox_handlers.py  test_feishu_service.py  test_feishu_task_intake.py  test_health.py  test_inspection_api.py  test_llm_gateway.py  test_local_doctor.py  test_memory_gateway.py  test_memory_retention.py  test_migrations.py  test_model_profiles.py  test_policy.py  test_postgres_smoke.py  test_review_gate.py  test_runtime_dependencies.py  test_runtime_graph.py  test_runtime_outbox.py  test_runtime_worker.py  test_schemas.py  test_sop_registry.py  test_storage_models.py  test_storage_repositories.py  test_task_authorization.py  test_war_room_cards.py  test_war_room_outbox.py
(+122 files in other folders)
