[project]
name = "lietou"
version = "0.1.0"
description = "AI headhunter war room system"
readme = "README.md"
requires-python = ">=3.11,<3.13"
dependencies = [
  "fastapi>=0.115,<1.0",
  "uvicorn[standard]>=0.30,<1.0",
  "pydantic>=2.7,<3.0",
  "pydantic-settings>=2.3,<3.0",
  "sqlalchemy>=2.0,<3.0",
  "alembic>=1.13,<2.0",
  "psycopg[binary,pool]>=3.2,<4.0",
  "pgvector>=0.3,<1.0",
  "langgraph>=0.2,<1.0",
  "langgraph-checkpoint-postgres>=2.0,<4.0",
  "lark-oapi>=1.4,<2.0",
  "pycryptodome>=3.20,<4.0",
  "PyNaCl>=1.5,<2.0",
  "httpx>=0.27,<1.0",
  "tenacity>=8.3,<10.0"
]

[project.scripts]
lietou-config-check = "app.runtime.config_check:main"
lietou-discord-register-commands = "app.runtime.discord_commands:main"
lietou-external-smoke = "app.runtime.external_smoke:main"
lietou-local-doctor = "app.runtime.local_doctor:main"
lietou-memory-retention = "app.runtime.memory_retention:main"
lietou-outbox-worker = "app.runtime.worker:main"
lietou-postgres-smoke = "app.runtime.postgres_smoke:main"

[project.optional-dependencies]
dev = [
  "pytest>=8.0,<9.0",
  "pytest-asyncio>=0.24,<1.0",
  "ruff>=0.8,<1.0"
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[tool.setuptools.packages.find]
include = ["app*"]
exclude = ["docs*", "migrations*", "tests*"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = ["B008"]
